--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   logging: ^1.1.1
   flutter_local_notifications: ^17.2.2
   flutter_launcher_icons: ^0.13.1 
+  flutter_image_compress: ^2.0.4 
 
 dev_dependencies:
   flutter_test:
@@ -82,7 +83,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - .env
+    #- .env
     - assets/
     - assets/onboarding_main.webp
   # An image asset can refer to one or more resolution-specific "variants", see
