--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,3 +1,4 @@
+# Android specific
 gradle-wrapper.jar
 /.gradle
 /captures/
@@ -6,9 +7,84 @@ gradle-wrapper.jar
 /local.properties
 GeneratedPluginRegistrant.java
 .cxx/
+**/android/.gradle
+**/android/captures/
+**/android/gradlew
+**/android/gradlew.bat
+**/android/local.properties
+**/android/**/GeneratedPluginRegistrant.java
 
-# Remember to never publicly share your keystore.
-# See https://flutter.dev/to/reference-keystore
+# Android keystore files
 key.properties
 **/*.keystore
 **/*.jks
+
+# Environment files - CRITICAL FOR API KEY SECURITY
+.env
+.env.*
+.env.local
+.env.production
+.env.development
+*.env
+
+# API Keys and secrets
+**/api_keys.dart
+**/secrets.dart
+**/config/secrets/
+**/constants/secrets.dart
+
+# Flutter/Dart
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+flutter_*.png
+linked_*.ds
+unlinked.ds
+unlinked_spec.ds
+.metadata
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Visual Studio Code related
+.vscode/
+.history/
+*.code-workspace
+
+# Coverage
+coverage/
+*.lcov
+
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+*.backup
+
+# Test related
+test/.test_coverage.dart
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Private/Sensitive files
+private/
+secrets/
+temp/
+tmp/
