--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ dependencies:
   permission_handler: ^11.3.1
   url_launcher: ^6.1.14
   flutter_pdfview: ^1.3.0  
-  path_provider: ^2.1.1   
+  pdf: ^3.10.8
+  path_provider: ^2.1.1  
+  open_file: ^3.3.2 
   http: ^1.4.0 
   image_picker: ^1.1.2
   shared_preferences: ^2.2.0
@@ -58,6 +60,10 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   flutter_launcher_icons: ^0.13.1 
   flutter_image_compress: ^2.0.4 
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  cloud_firestore: ^5.0.1  
+  firebase_storage: ^12.0.1
 
 dev_dependencies:
   flutter_test:
@@ -83,7 +89,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    #- .env
+    - .env
     - assets/
     - assets/onboarding_main.webp
   # An image asset can refer to one or more resolution-specific "variants", see
